knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Board_Certification__c.field-meta.xml
<CustomField>
    <fullName>Board_Certification__c</fullName>
    <label>Board Certification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>