knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/bpats__Rejected_By_Job_Closure__c.field-meta.xml
<CustomField>
    <fullName>bpats__Rejected_By_Job_Closure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected By Job Closure</label>
    <type>Checkbox</type>
</CustomField>