knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Candidate_Number__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Number__c</fullName>
    <description>PracticeMatch application input</description>
    <label>Candidate Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>