knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>The date the application was submitted</description>
    <inlineHelpText>enter the date submitted</inlineHelpText>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>