knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated__c</fullName>
    <description>Date the application was updated</description>
    <inlineHelpText>Enter the date the application was updated</inlineHelpText>
    <label>Date Updated</label>
    <type>Date</type>
</CustomField>