knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Do_you_have_an_NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_an_NPI_Number__c</fullName>
    <label>Do you have an NPI Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>