knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <label>Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>