knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>DocCafe application input</description>
    <label>Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>