knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <description>Home Phone number of the applicant</description>
    <inlineHelpText>Enter your home phone</inlineHelpText>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>