knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Immigration_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Immigration_Assistance__c</fullName>
    <label>Immigration Assistance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>