knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <description>Used to connect incoming Job Applicants to the right Job</description>
    <label>Job Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>