knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Job_Seeker_Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Seeker_Contacted_Date__c</fullName>
    <label>Job Seeker Contacted Date</label>
    <type>Date</type>
</CustomField>