knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Link_to_View_Application__c.field-meta.xml
<CustomField>
    <fullName>Link_to_View_Application__c</fullName>
    <description>DocCafe application input</description>
    <label>Link to View Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>