knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Location_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Location_Preferences__c</fullName>
    <label>Location Preferences</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>