knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>PracticeLink application input</description>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>