knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <label>NPI Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>