knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <description>PracticeLink application input</description>
    <label>Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>