knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <formula>bpats__Job__r.Recruiter__r.FirstName + &quot; &quot; + bpats__Job__r.Recruiter__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recruiter</label>
    <type>Text</type>
</CustomField>