knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/SM_Sync__c.field-meta.xml
<CustomField>
    <fullName>SM_Sync__c</fullName>
    <description>Formula used to determine whether the Job Board Applicant record should be synced with the Asymbl Search &amp; Match product.</description>
    <formula>CASE(bpats__Status__c,
&quot;Added to Job&quot;, 0,
&quot;Rejected&quot;, 0,
&quot;Discarded&quot;, 0,
1) = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Whether the Job Board Applicant record should be synced with Asymbl Search &amp; Match</inlineHelpText>
    <label>SM Sync</label>
    <type>Checkbox</type>
</CustomField>