knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/State_Licenses__c.field-meta.xml
<CustomField>
    <fullName>State_Licenses__c</fullName>
    <label>State Licenses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>