knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job_Board_Application__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>Work phone of the applicant</description>
    <inlineHelpText>Enter in your work phone</inlineHelpText>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>